dark Theme implementation

--- a/web/index.html
+++ b/web/index.html
@@ -20,10 +20,10 @@
     <!-- iOS meta tags & icons -->
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
-    <meta content="tangram" name="apple-mobile-web-app-title">
+    <meta content="triangram" name="apple-mobile-web-app-title">
     <link href="icons/Icon-192.png" rel="apple-touch-icon">
 
-    <title>tangram</title>
+    <title>triangram</title>
     <link href="manifest.json" rel="manifest">
 </head>
 <body>
